<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.ladyluh.nekoffee</groupId>
        <artifactId>Nekoffee</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>nyxiabot-services</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ws.schild</groupId>
            <artifactId>jave-core</artifactId>
            <version>3.5.0</version> <!-- Or a recent version -->
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nekoffee-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nekoffee-builder-util</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version> 
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-config</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ws.schild</groupId>
            <artifactId>jave-core</artifactId>
            <version>3.5.0</version> 
        </dependency>
        <dependency>
            <groupId>ws.schild</groupId>
            <artifactId>jave-all-deps</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nekoffee-json-util</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-database</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.imgscalr</groupId>
            <artifactId>imgscalr-lib</artifactId>
            <version>4.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-cache</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>